--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <title>DB Listener</title>
   </head>
   <body>
+    <div style="border-style: solid; border-width: 5px;">
     <canvas id="main" width="500" height="500"></canvas>
+    </div>
+    <div id="details">
+      <div></div>
+    </div>
     <script type="text/javascript" src="static/render.js"></script>
     <script type="text/javascript" src="static/index.js"></script>
   </body>
