--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
     <title>DB Listener</title>
   </head>
   <body>
-    <div style="border-style: solid; border-width: 5px;">
-    <canvas id="main" width="100%" height="500"></canvas>
-    </div>
-    <div id="details">
-      <div></div>
-    </div>
     <script type="text/javascript" src="static/two.js"></script>
+    <script type="text/javascript" src="static/physics.js"></script>
     <script type="text/javascript" src="static/render.js"></script>
     <script type="text/javascript" src="static/index.js"></script>
   </body>
