--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   </head>
   <body>
     <div style="border-style: solid; border-width: 5px;">
-    <canvas id="main" width="500" height="500"></canvas>
+    <canvas id="main" width="100%" height="500"></canvas>
     </div>
     <div id="details">
       <div></div>
     </div>
+    <script type="text/javascript" src="static/two.js"></script>
     <script type="text/javascript" src="static/render.js"></script>
     <script type="text/javascript" src="static/index.js"></script>
   </body>
