--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>DB Listener</title>
   </head>
   <body>
+    <canvas id="main" width="1000" height="600"></canvas>
+    <div id="details">
+      <div></div>
+    </div>
     <script type="text/javascript" src="static/two.js"></script>
     <script type="text/javascript" src="static/physics.js"></script>
     <script type="text/javascript" src="static/render.js"></script>
