have simple connections working

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="static/text.js"></script>
     <script type="text/javascript" src="static/details.js"></script>
     <script type="text/javascript" src="static/box_item.js"></script>
+    <script type="text/javascript" src="static/connections.js"></script>
     <script type="text/javascript" src="static/state.js"></script>
     <script type="text/javascript" src="static/context.js"></script>
     <script type="text/javascript" src="static/render.js"></script>
