made code a little cleaner and reusable

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <div id="details">
       <div></div>
     </div>
-    <script type="text/javascript" src="static/two.js"></script>
-    <script type="text/javascript" src="static/physics.js"></script>
+    <script type="text/javascript" src="static/text.js"></script>
+    <script type="text/javascript" src="static/details.js"></script>
+    <script type="text/javascript" src="static/box_item.js"></script>
     <script type="text/javascript" src="static/state.js"></script>
     <script type="text/javascript" src="static/context.js"></script>
     <script type="text/javascript" src="static/render.js"></script>
