refactored and cleaned up code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     </div>
     <script type="text/javascript" src="static/two.js"></script>
     <script type="text/javascript" src="static/physics.js"></script>
+    <script type="text/javascript" src="static/state.js"></script>
+    <script type="text/javascript" src="static/context.js"></script>
     <script type="text/javascript" src="static/render.js"></script>
     <script type="text/javascript" src="static/index.js"></script>
   </body>
