--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <title>DB Listener</title>
   </head>
   <body>
-    <canvas id="main" width="1000" height="600"></canvas>
-    <div id="details">
-      <div></div>
+    <div style="margin-bottom:10px;">
+      <button onclick="main.clear_data()">Reset Data</button>
     </div>
+    <canvas style="border:black;border-style:solid;" id="main" width="1000" height="600"></canvas>
+
     <script type="text/javascript" src="static/text.js"></script>
     <script type="text/javascript" src="static/details.js"></script>
     <script type="text/javascript" src="static/box_item.js"></script>
