cleaning up UI and code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <div style="margin-bottom:10px;">
       <button onclick="main.clear_data()">Reset Data</button>
+      <label id="status" style="margin-left:10px;"></label>
     </div>
     <canvas style="border:black;border-style:solid;" id="main" width="1000" height="600"></canvas>
 
