--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
     </div>
     <canvas style="border:black;border-style:solid;" id="main" width="1000" height="600"></canvas>
 
-    <script type="text/javascript" src="static/text.js"></script>
-    <script type="text/javascript" src="static/details.js"></script>
-    <script type="text/javascript" src="static/box_item.js"></script>
-    <script type="text/javascript" src="static/connections.js"></script>
-    <script type="text/javascript" src="static/state.js"></script>
-    <script type="text/javascript" src="static/context.js"></script>
-    <script type="text/javascript" src="static/render.js"></script>
-    <script type="text/javascript" src="static/index.js"></script>
+    <script type="module" src="static/index.js"></script>
   </body>
 </html>
