fixed should_render check; added reset coordinates button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <div>
       <div style="margin-bottom:10px;">
         <button id="reset-button">Reset Data</button>
+        <button id="reset-graph">Reset Graph Position</button>
         <label id="status" style="margin-left:10px;"></label>
         <button style="margin-left:10px;" id="back-button">Back</button>
       </div>
